# bifp

./: CONTRIBUTORS.md  README.md  RUNBOOK.md
bifp-core/: Cargo.toml  README.md
bifp-core/src/: badge.rs  flag.rs  lib.rs  plan.rs  store.rs  tap.rs  trit.rs
docs/: bifp-protocol.tex  bifp-spec.json
